log
Wed 24 Apr 2024 06:21:46 PM UTC: 
 tests:  0|6
total_score: 0/70
31a1517
Thu 25 Apr 2024 12:41:41 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from hashmap.c:6,
                 from test.c:4:
hashmap.h: In function ‘createMap’:
hashmap.h:21:49: error: invalid application of ‘sizeof’ to incomplete type ‘HashMap’
   21 |     HashMap * mapa = (HashMap *) malloc (sizeof(HashMap));
      |                                                 ^~~~~~~
hashmap.h:22:9: error: invalid use of incomplete typedef ‘HashMap’
   22 |     mapa->buckets = (Pair **) calloc (capacity, sizeof(Pair *));
      |         ^~
hashmap.h:23:9: error: invalid use of incomplete typedef ‘HashMap’
   23 |     mapa->capacity = capacity;
      |         ^~
hashmap.h:24:9: error: invalid use of incomplete typedef ‘HashMap’
   24 |     mapa->current = -1;
      |         ^~
In file included from test.c:4:
hashmap.c: At top level:
hashmap.c:54:11: error: redefinition of ‘createMap’
   54 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
In file included from hashmap.c:6,
                 from test.c:4:
hashmap.h:20:11: note: previous definition of ‘createMap’ with type ‘HashMap *(long int)’ {aka ‘struct HashMap *(long int)’}
   20 | HashMap * createMap(long capacity){
      |           ^~~~~~~~~
Compilation failed
f5eeab0
Thu 25 Apr 2024 12:46:51 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
0d4e216
Thu 25 Apr 2024 12:47:12 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9803ced
Thu 25 Apr 2024 12:49:16 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 30/70
ae24f8b
Thu 25 Apr 2024 12:53:48 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:10: error: assignment to ‘HashMap *’ {aka ‘struct HashMap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   83 |   if(map = NULL || key == NULL) return NULL;
      |          ^
hashmap.c:83:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   83 |   if(map = NULL || key == NULL) return NULL;
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
bdba3f2
Thu 25 Apr 2024 12:55:36 AM UTC: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:10: error: assignment to ‘HashMap *’ {aka ‘struct HashMap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   83 |   if(map = NULL || key == NULL) return NULL;
      |          ^
hashmap.c:83:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   83 |   if(map = NULL || key == NULL) return NULL;
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
de512b0
Thu 25 Apr 2024 12:57:04 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:83:10: error: assignment to ‘HashMap *’ {aka ‘struct HashMap *’} from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   83 |   if(map = NULL || key == NULL) return NULL;
      |          ^
hashmap.c:83:6: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   83 |   if(map = NULL || key == NULL) return NULL;
      |      ^~~
cc1: all warnings being treated as errors
Compilation failed
cb2c654
Thu 25 Apr 2024 12:58:29 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
946a03c
Thu 25 Apr 2024 12:58:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
2218ae2
Thu 25 Apr 2024 01:00:17 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
a91ff30
Thu 25 Apr 2024 01:02:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:87:37: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
   87 |   while(map->buckets[index] != NULL && map->buckets[index]->key != NULL || strcmp(map->buckets[index]->key, key) != 0)){
      |                                     ^
hashmap.c:87:119: error: expected statement before ‘)’ token
   87 |   while(map->buckets[index] != NULL && map->buckets[index]->key != NULL || strcmp(map->buckets[index]->key, key) != 0)){
      |                                                                                                                       ^
hashmap.c:87:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   87 |   while(map->buckets[index] != NULL && map->buckets[index]->key != NULL || strcmp(map->buckets[index]->key, key) != 0)){
      |   ^~~~~
hashmap.c:87:120: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   87 |   while(map->buckets[index] != NULL && map->buckets[index]->key != NULL || strcmp(map->buckets[index]->key, key) != 0)){
      |                                                                                                                        ^
cc1: all warnings being treated as errors
Compilation failed
c4baa08
Thu 25 Apr 2024 01:02:28 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:87:37: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
   87 |   while(map->buckets[index] != NULL && map->buckets[index]->key != NULL || strcmp(map->buckets[index]->key, key) != 0){
      |                                     ^
cc1: all warnings being treated as errors
Compilation failed
a013ee6
Thu 25 Apr 2024 01:02:47 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
313d785
Thu 25 Apr 2024 01:05:06 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
81eda2f
Thu 25 Apr 2024 01:09:04 AM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  11|2
total_score: 50/70
2319d06
Thu 25 Apr 2024 01:10:51 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
634fee6
Thu 25 Apr 2024 01:11:33 AM UTC: 
 hashmap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
fc1b459
Thu 25 Apr 2024 01:12:28 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
7da61e7
Thu 25 Apr 2024 01:12:50 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
62e68c2
Thu 25 Apr 2024 01:13:05 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
d99596d
Thu 25 Apr 2024 01:13:44 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
7edebbd
Thu 25 Apr 2024 01:15:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
6eb4383
Thu 25 Apr 2024 01:16:26 AM UTC: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  16|1
total_score: 60/70
63d3eb3
Thu 25 Apr 2024 01:18:28 AM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:56:10: error: unused variable ‘size’ [-Werror=unused-variable]
   56 |     long size = map->size;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
f5e49ed
